# source

./: COMMON_LIB_REPORT.md  COMMON_LIB_STATUS.md  Cargo.toml  DRYAD_LANGUAGE_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  NAMESPACE_RESOLUTION_REPORT.md  OAK_SYSTEM_DOCUMENTATION.md  QUICK_START_GUIDE.md  README.md  SESSION_REPORT.md  SYSTEM_MODULES_IMPLEMENTATION_REPORT.md  TECHNICAL_DOCUMENTATION.md  TESTE_SUITE_REPORT.md  USING_EXPORT_REPORT.md  complexo.dryad  debug_static.dryad  debug_tokenizer.rs  debug_tokens.rs  demo_basico.dryad  demo_classes.dryad  demo_final.dryad  demo_pessoa_completo.dryad  demo_simples.dryad  example_complete.dryad  exemplo_native_functions.dryad  logico.dryad  main.dryad  oaklibs.json  run_tests.ps1  simple_static.dryad  simpleuse.dryad  test_advanced_features.dryad  test_advanced_math.dryad  test_all_operators.dryad  test_assignment.dryad  test_class.dryad  test_comparisons.dryad  test_complex.dryad  test_comprehensive.dryad  (+30 more)
crates/dryad_cli/: Cargo.toml
crates/dryad_cli/src/: main.rs
docs/: ERROR_CATALOG.md  README.md  console_no_namespace.dryad  console_simple.dryad
examples/: oak_api_usage.rs  text_demo_simple.dryad  text_modules_demo.dryad
lib/: INDEX.md  PROJECT_STATUS.md  README.md  TECHNICAL_GUIDE.md  TEMPLATES.md  TESTING_VALIDATION.md  TROUBLESHOOTING.md
meu-projeto-teste/: .gitignore  README.md  main.dryad  oaklibs.json
reports/: ARRAY_IMPLEMENTATION_REPORT.md  COMMON_LIB_STATUS.md  COMPLETE_PROJECT_STATUS_REPORT_2025.md  CONCLUSAO_FINAL.md  DOCUMENTATION_UPDATE_SUMMARY.md  PROJECT_STATUS.md  (+14 more)
(+315 files in other folders)
