[package]
name = "dryad"
version = "0.1.0"
edition = "2021"

[lib]
name = "dryad"
path = "src/lib.rs"

[[bin]]
name = "dryad"
path = "src/main.rs"

[[example]]
name = "oak_api_usage"
path = "examples/oak_api_usage.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
semver = "1.0"

[dev-dependencies]
